# gram-matrix-bench

./: .gitignore  README.md  bench.gpl  bench.sh  gram  gram.opam
data/: bench.txt
src/: dune  gram.ml
